# valkka-core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COPYING  Dockerfile  README.md  Release.txt  add_untracked.bash  changestr.bash  cleanpy.bash  easy_build.bash  new_build.bash  ppa_checklist.md  prepare_build.bash  prepare_build0.bash  pythoncheck.bash  setver.bash  use_build.bash
.github/ISSUE_TEMPLATE/: bug.md  general.md
.github/workflows/: debian.yml  docker.yml
.github/workflows_scrap/: debian.yml  docker.yml
aux/: 1.rgb  1.yuv  2.rgb  2.yuv  hik_memo.txt  multicast.sdp  process_crowd.bash  syscntl_tune.txt  unicast_to_multicast.bash  unicast_to_multicast_usb.bash  unv_memo.txt  valkka_builder.bash
debian/: README.md  addlog.py  changelog  control  control.sh  copyright  files  rules  sendall.bash
debian/source/: options
doc/: config
doc/html/: Valkka-example.html  another_page.html  avdep_8cpp.html  avdep_8cpp__incl.map  avdep_8cpp__incl.md5  avdep_8h.html  avdep_8h__dep__incl.map  avdep_8h__incl.map  avdep_8h_source.html  avthread_8h__dep__incl.map  avthread_8h__incl.map  avthread_8h_source.html  c_api.html  chains_8cpp__incl.map  chains_8cpp__incl.md5  chains_8h.html  chains_8h__dep__incl.map  chains_8h__dep__incl.md5  chains_8h__incl.md5  chains_8h_source.html  classAVThread-members.html  classAVThread__coll__graph.map  classAVThread__coll__graph.md5  classAVThread_a0a47c8903069531f52634886df841863_cgraph.map  classBasicChain-members.html  classBasicChain.html  classBasicChain__coll__graph.md5  classBifurcateFrameFilter-members.html  classBifurcateFrameFilter__inherit__graph.dot  classBifurcateFrameFilter__inherit__graph.md5  classBitmapFrame.html  classBriefInfoFrameFilter-members.html  classConnection.html  classConnection__coll__graph.map  classConnection__inherit__graph.md5  classDecoder-members.html  classDecoderBase-members.html  classDecoderBase.html  classDecoderBase__coll__graph.md5  classDecoderBase__inherit__graph.map  (+274 more)
docker/: Dockerfile.armv8  Dockerfile.armv8_ubuntu_18  Dockerfile.armv8_ubuntu_22  Dockerfile.x86  Dockerfile.x86_ubuntu_18  Dockerfile.x86_ubuntu_20  Dockerfile.x86_ubuntu_22  README.md  build.bash  build_armv8.bash  build_test_all.bash  build_x86.bash  clean_armv8.bash  clean_x86.bash  cont_armv8.bash  cont_x86.bash  create_all.bash  create_image.bash  get.bash  prepare.bash  qemu-arm-static  rebuild.bash  run.bash  run0.bash  test.bash  test_it.bash
docs/: config  index.html  make_doc.bash
docs/downloads/: Valkka-0.1.0-cp35-cp35m-linux_x86_64.whl  index.html
docs/html/: Caching.html  Decoder.html  Sharing.html  _2home_2sampsa_2C_2valkka_2examples_2python_2qt_example_1_8py-example.html  _2home_2sampsa_2C_2valkka_2include_2threads_8h-example.html  annotated.html  avdep_8cpp.html  avdep_8cpp__incl.dot  avdep_8cpp__incl.map  avdep_8cpp__incl.md5  avdep_8h.html  avdep_8h__dep__incl.dot  avdep_8h__dep__incl.map  avdep_8h__dep__incl.md5  avdep_8h__incl.dot  avdep_8h__incl.map  avdep_8h__incl.md5  avdep_8h_source.html  avfilethread_8cpp.html  avfilethread_8cpp__incl.dot  avfilethread_8cpp__incl.map  avfilethread_8cpp__incl.md5  avfilethread_8h.html  avfilethread_8h__dep__incl.dot  avfilethread_8h__dep__incl.map  (+2070 more)
ext/: README.md  config.linux-generic  configure_ffmpeg.bash  configure_live.bash  download_ffmpeg.bash  download_live.bash  test_ffmpeg.bash
include/: alsa.h  alsathread.h  avdep.h  avfilethread.h  avthread.h  cachestream.h  chains.h  codec.h  common.h  constant.h  create.bash  decoder.h  decoder_subclass.md  decoders.h  decoderthread.h  doc.h  enumiter.h  event.h  fdwritethread.h  file.h  fileframefilter.h  filestream.h  filethread.h  filters.h  frame.h  framefifo.h  framefilter.h  framefilter2.h  framefilterset.h  frames.h  hwdecoder.h  live.h  livedep.h  liveserver.h  livethread.h  logging.h  macro.h  makeswig.bash  makeswig_include.bash  metadata.h  (+28 more)
lib/: config_ffmpeg.py  find_symbols.bash  ln_ffmpeg.bash  ln_live.bash  run_config_.bash  run_config_3_4_.bash
ppa/: README.md
python/: MANIFEST.in  PYPI.rst  README.md  clean.bash  cleandist.bash  compile3.bash  compile34.bash  compile35.bash  make_links.bash  make_swig_file.bash  makebindingpkg3.bash  makecontainedpkg3.bash  makefakesourcepkg3.bash  makepkg3.bash  makesourcepkg3.bash  makewhlpkg3.bash  quicktest.py  setup.py  template.py  test_env.bash  test_upload.bash  testthread.py  upload.bash  valkka.i.base  valkka_core.i
script/: changestr.bash  docker.bash  pythoncheck.bash  setver.bash
src/: alsathread.cpp  avdep.cpp  avfilethread.cpp  avthread.cpp  cachestream.cpp  chains.cpp  create.bash  decoder.cpp  decoders.cpp  decoderthread.cpp  event.cpp  fdwritethread.cpp  file.cpp  fileframefilter.cpp  filestream.cpp  filethread.cpp  filters.cpp  frame.cpp  framefifo.cpp  framefilter.cpp  framefilter2.cpp  framefilterset.cpp  frames.cpp  hwdecoder.cpp  live.cpp  liveserver.cpp  livethread.cpp  logging.cpp  movement.cpp  muxer.cpp  muxshmem.cpp  opengl.cpp  openglframefifo.cpp  openglobject.cpp  openglthread.cpp  queues.cpp  rawrite.cpp  remcomments.bash  rgbframefifo.cpp  shader.cpp  (+13 more)
templates/: write_thread.bash  write_thread.cpp  write_thread.h
test/: av_live_thread_test.cpp  av_thread_test.cpp  avthread_test.cpp  cache_test.cpp  cachestream_decode_test.cpp  cachestream_test.cpp  classes_test.cpp  fdwritethread_test.cpp  fifo_test.cpp  file_test.cpp  filethread_test.cpp  filethread_test0.cpp  frame_test.cpp  framefifo_test.cpp  framefilter_test.cpp  frames_test.cpp  gen_script.bash  gen_sections.bash  list.bash  live_av_framefilter_test.cpp  live_av_openglthread_test.cpp  live_av_openglthread_test2.cpp  live_av_shmem_test.cpp  live_muxshmem_test.cpp  live_stream_check_test.cpp  live_streaming_test.cpp  live_thread_test.cpp  livethread_rtsp_test.cpp  livethread_test.cpp  log_test.cpp  movement_test.cpp  mux_test.cpp  opengl_test.cpp  opengl_thread_test.cpp  openglframefifo_test.cpp  openglthread_test.cpp  rawrite_test.cpp  render_test.cpp  rgbframefifo_test.cpp  ringbuffer_test.cpp  (+10 more)
test_py/: fsmanager.py  run_docker_test.py  valkkafs_test_old.py
(+382 files in other folders)
